[bug]#4723 fix gap between filters and previews

--- a/assets/themes/leo/css/modules.less
+++ b/assets/themes/leo/css/modules.less
@@ -4196,3 +4196,14 @@ plus{
         height: auto;
     }
 }
+
+
+.main-col{
+  .checkbox-filters{
+	float: left;
+  }
+
+  .preview{
+	float: left;
+  }
+}
