--- a/assets/themes/leo/dyslexic/theme.css
+++ b/assets/themes/leo/dyslexic/theme.css
@@ -11168,6 +11168,12 @@ plus .opener.minus {
 .block-editor div[drawing-zone] {
   height: auto;
 }
+.main-col .checkbox-filters {
+  float: left;
+}
+.main-col .preview {
+  float: left;
+}
 h1 {
   font-size: 24px;
 }
